Issue #16742: My fix on PyOS_StdioReadline() was incomplete, PyMem_FREE() was not patched